@@ -1,3 +1,8 @@
+2008-08-15  Dan Williams  <dcbw@redhat.com>
+
+	* src/nm-dbus-net.c
+		- (nm_dbus_net_get_address): fix crash (bgo #459323)
+
 2008-06-24  Dan Williams  <dcbw@redhat.com>
 
 	* src/nm-dbus-net.c
